<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:helperText="Write your weight"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="Pounds">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/weight"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFeet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        app:helperText="Write your Feet"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilWeight"
        app:suffixText="KG">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_feet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/feet"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilInch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        app:helperText="Write your Inch"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tilWeight"
        app:suffixText="KG">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_inch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/inch" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llBmiOutputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFeet"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi"
            android:textSize="@dimen/text_size"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="00"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="Normal"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="Good form"
            android:layout_marginTop="15dp"
            android:gravity="center"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBmiOutputs"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>