<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/tf_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/weight"
        app:helperTextEnabled="true"
        app:helperText="Write your WEIGHT in KG"
        app:helperTextTextColor="?attr/colorOnSurfaceVariant"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:startIconDrawable="@drawable/body_type_overweight"
        app:startIconScaleType="fitXY"
        app:startIconContentDescription="Body weight"
        app:suffixText="KG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/height"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        app:helperText="Write your HEIGHT in CM"
        app:helperTextEnabled="true"
        app:helperTextTextColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_height"
        app:startIconContentDescription="Body weight"
        app:startIconDrawable="@drawable/body_type_overweight"
        app:startIconScaleType="fitXY"
        app:suffixText="CM">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="15dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_bmi"
            android:textSize="@dimen/text_size"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="00"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="Normal"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            tools:text="Good form"
            android:layout_marginTop="15dp"
            android:justificationMode="inter_word"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>